--- a/main.css
+++ b/main.css
@@ -23,10 +23,12 @@ form {
 }
 .botImage {
     z-index: 2;
-    height: 75%;
+    height: 125%;
+    width: 125%;
 }
 .botText {
-    width: 300px;
+    width: 200px;
+    height: 75px;
     text-align: center;
 }
 .buttonAnim {
@@ -71,6 +73,7 @@ form {
     height: 1200px;
     margin-top: 200px;
     z-index: -1;
+    display: none;
 }
 
 @keyframes spin {
@@ -123,14 +126,44 @@ form {
     -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite
 }
-@media only screen and (min-width : 480px) {
-
-}
-@media only screen and (min-width : 800px) {
+@media only screen and (min-width : 375px) {
     .botImage {
         height: 100%;
+        width: 100%;
     }
     .botText {
-        width: 500px;
+        height: 75px;
+    }
+}
+@media only screen and (min-width : 425px) {
+    .botText {
+        width: 300px;
+    }
+    .loader {
+       height: 75px;
+       width: 75px;
+       margin-top: -35px;
+   }
+}
+@media only screen and (min-width : 768px) {
+    .botImage {
+        height: 50%;
+        width: 50%;
+    }
+    #crystalBall {
+        display: block;
+        height: 1000px;
+    }
+}
+@media only screen and (min-width : 1024px) {
+    .botImage {
+        height: 55%;
+        width: 55%;
+    }
+}
+@media only screen and (min-width : 1440px) {
+    .botImage {
+        height: 35%;
+        width: 35%;
     }
 }
